--- a/css/common.css
+++ b/css/common.css
@@ -14,7 +14,9 @@
     'opsz' 24;
     font-size: 2.2rem;
   };
-  
+ 
+
+
   
   
 body{
@@ -197,7 +199,7 @@ body::-webkit-scrollbar{
    left:0px;
    width:20px;
    background-color: black;
-   opacity: 0.3;
+   opacity: 0.5;
    z-index:999;
    border-radius: 0 5px 5px 0;
    transition:0.3s;
@@ -219,24 +221,69 @@ body::-webkit-scrollbar{
     height:100vh;
     width:400px;
     background-color: black;
-    opacity: 0.3;
+    opacity: 0.5;
     z-index: 400;
 }
 
+.offcanvas .offcanvas-body{
 
-/* MODAL */
-.modal-header{
-    
-    background-color : #2A76C7 !important;
+}
+.offcanvas .offcanvas-body>.wrapper{
+    display:flex;
+    justify-content: center; 
+    align-items: start; 
+    width:350px;
+   
+   
+    position:relative;
+    top:150px;
+    padding:5px;
+}
+
+.offcanvas .offcanvas-body>.wrapper .buildingwind{
+    display:flex;
+    justify-content: start;
+    align-items: start;
+    flex-direction: column;
+    background-color:white;
+    font-size : 1.2rem;
+    padding : 10px;
+    margin-bottom:20px;
+}
+.offcanvas .offcanvas-body>.wrapper .buildingwind>.header{
+    width :  319px;
     height : 50px;
-    line-height:50px;
-    font-size:0.6rem;
-    color:white;
+    border: 1px solid;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    margin-bottom:5px;
 }
-.modal-header button{
-    color:white;
-    background-color: white;
+.offcanvas .offcanvas-body>.wrapper .buildingwind>.header>h4{
+
+    
+    
 }
+.offcanvas .offcanvas-body>.wrapper .buildingwind>.body{
+    height : 450px;
+    display:flex;
+    justify-content: space-between;
+    margin-bottom:5px;
+}
+.offcanvas .offcanvas-body>.wrapper .buildingwind>.body>div{
+    border : 1px solid ;
+
+}
+
+.offcanvas .offcanvas-body>.wrapper .buildingwind>.footer{
+    height : 50px;
+    border : 1px solid ;
+}
+
+
+.offcanvas-show{display:block;}
+.offcanvas-hide{display:none;}
+
 
 
 
