--- a/css/common.css
+++ b/css/common.css
@@ -228,6 +228,10 @@ body::-webkit-scrollbar{
 .offcanvas .offcanvas-body{
 
 }
+.offcanvas .offcanvas-body::-webkit-scrollbar{
+    display:none;
+}
+
 .offcanvas .offcanvas-body>.wrapper{
     display:flex;
     justify-content: center; 
@@ -239,6 +243,8 @@ body::-webkit-scrollbar{
     top:150px;
     padding:5px;
 }
+
+
 
 .offcanvas .offcanvas-body>.wrapper .buildingwind{
     display:flex;
@@ -258,6 +264,8 @@ body::-webkit-scrollbar{
     align-items:center;
     justify-content: center;
     margin-bottom:5px;
+    padding:5px;
+
 }
 .offcanvas .offcanvas-body>.wrapper .buildingwind>.header>h4{
 
@@ -281,8 +289,52 @@ body::-webkit-scrollbar{
 }
 
 
-.offcanvas-show{display:block;}
-.offcanvas-hide{display:none;}
+/*  */
+.offcanvas .offcanvas-body>.wrapper .dangerzone{
+    display:flex;
+    justify-content: start;
+    align-items: start;
+    flex-direction: column;
+    background-color:white;
+    font-size : 1.2rem;
+    padding : 10px;
+    margin-bottom:20px;
+}
+.offcanvas .offcanvas-body>.wrapper .dangerzone>.header{
+    width :  319px;
+    height : 50px;
+    border: 1px solid;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    margin-bottom:5px;
+    padding:5px;
+
+}
+.offcanvas .offcanvas-body>.wrapper .dangerzone>.header>h4{
+
+    
+    
+}
+.offcanvas .offcanvas-body>.wrapper .dangerzone>.body{
+    height : 450px;
+    display:flex;
+    justify-content: space-between;
+    margin-bottom:5px;
+
+}
+.offcanvas .offcanvas-body>.wrapper .dangerzone>.body>div{
+    border : 1px solid ;
+
+}
+
+.offcanvas .offcanvas-body>.wrapper .dangerzone>.footer{
+    height : 50px;
+    border : 1px solid ;
+}
+
+
+ 
 
 
 
