--- a/css/common.css
+++ b/css/common.css
@@ -1,8 +1,9 @@
 *{
     box-sizing:border-box;
     width : 100%;
-  
+    
     position:relative;
+
 }
 
 /* GOOGLE ICON  */
@@ -13,6 +14,7 @@
     'GRAD' 0,
     'opsz' 24;
     font-size: 2.2rem;
+    
   };
  
 
@@ -48,12 +50,8 @@ body::-webkit-scrollbar{
 }
 
 .wrapper>header>.top-header{
-   
-   
     background-color: #76ADE8;
-    z-index : 2;
-
-    
+    z-index : 2; 
 }
 .wrapper>header>.top-header>div{
     height : 60px;
@@ -166,6 +164,7 @@ body::-webkit-scrollbar{
  
     position:fixed;
     width:100vw;
+    left:calc(-50vw + 50%);
     height:800px;    
 }
 
@@ -199,7 +198,7 @@ body::-webkit-scrollbar{
    left:0px;
    width:20px;
    background-color: black;
-   opacity: 0.5;
+   opacity: 0.7;
    z-index:999;
    border-radius: 0 5px 5px 0;
    transition:0.3s;
@@ -207,6 +206,8 @@ body::-webkit-scrollbar{
 }
 .offcanvas_btn img{
     width :20px;
+    left:-1px;
+
     
 }
 .ToRight{
@@ -221,7 +222,7 @@ body::-webkit-scrollbar{
     height:100vh;
     width:400px;
     background-color: black;
-    opacity: 0.5;
+    opacity: 0.7;
     z-index: 400;
 }
 
@@ -252,9 +253,10 @@ body::-webkit-scrollbar{
     align-items: start;
     flex-direction: column;
     background-color:white;
-    font-size : 1.2rem;
+    
     padding : 10px;
     margin-bottom:20px;
+    font-weight: 800;
 }
 .offcanvas .offcanvas-body>.wrapper .buildingwind>.header{
     width :  319px;
@@ -309,7 +311,7 @@ body::-webkit-scrollbar{
     justify-content: center;
     margin-bottom:5px;
     padding:5px;
-
+    font-weight: 800;
 }
 .offcanvas .offcanvas-body>.wrapper .dangerzone>.header>h4{
 
