--- a/css/common.css
+++ b/css/common.css
@@ -194,7 +194,7 @@ body::-webkit-scrollbar{
 /* OPENCANVAS */
 .offcanvas_btn{
    position:fixed;
-   top:45%;
+   top:50vh;
    left:0px;
    width:20px;
    background-color: black;
