--- a/css/common.css
+++ b/css/common.css
@@ -24,7 +24,8 @@
 body{
     font-family: 'Montserrat', sans-serif;
     min-height: 100vh;
-    width:100%;
+    width:100%;    
+    
 }
 body::-webkit-scrollbar{
     display: none;
@@ -32,10 +33,10 @@ body::-webkit-scrollbar{
 }
 .wrapper{
      /* 1600px; 900px */
-    width : 100rem;
+    /* width : 100rem;
     height : 56.25rem;  
-    margin : 0 auto;
-   
+    margin : 0 auto; */
+  
 }
 
 /* HEADER */
@@ -44,7 +45,7 @@ body::-webkit-scrollbar{
     left:0px;
     top:0px;
     width:100%;
-    height : 200px;
+    
     background-color: white;
     z-index : 555;
 }
@@ -73,7 +74,7 @@ body::-webkit-scrollbar{
 }
 .wrapper>header>.top-header>div>.left:nth-child(1){
     width:50rem; 
-    font-weight:800;  
+
 }
 .wrapper>header>.top-header>div>.left:nth-child(2){
      
@@ -87,10 +88,6 @@ body::-webkit-scrollbar{
     width : 50px;
     color:white;
     margin:0px;padding:0px;
-
-
-  
-   
 }
 .wrapper>header>.top-header .right a{
     color:white;
@@ -100,7 +97,7 @@ body::-webkit-scrollbar{
 }
 .wrapper>header>nav{
     width:100vw;
-    height : 140px;
+    height : 80px;
     padding : 0px;
     overflow:hidden;
     background-color: #2A76C7;
@@ -120,8 +117,8 @@ body::-webkit-scrollbar{
 }
 .wrapper>header>nav ul li{
     
-    width : 120px;
-    height : 120px;
+    width : 130px;
+    height : 60px;
    
     border : 2px solid white;
     background-color: #1D5087;
@@ -130,10 +127,19 @@ body::-webkit-scrollbar{
     justify-content: center;
     align-items: center;
     text-align: center;
-  
+    cursor: pointer;
+    transition: 0.4s;
 }
 .wrapper>header>nav ul li a{
-    display :block;
+    display :flex;
+    justify-content: start;
+    align-items: center;
+
+
+}
+
+.wrapper>header>nav ul li:hover{
+    background-color: #15395f;
 }
 .wrapper>header>nav ul li a>.title{
     font-size : 0.8rem;
@@ -146,23 +152,38 @@ body::-webkit-scrollbar{
 
 /* MAIN */
 
+.hrtg
+{
+    display:none;
+}
 .wrapper>main{
   
-    margin-top :180px;
+    margin-top :130px;
     
 
 }
 .wrapper>main>section{
-
-    position:relative;
+    position:absolute;
     display:flex;
     justify-content: center;
     align-items: center;
     height:800px;
+    display:none;
 }
 
 
+.wrapper>main>section:nth-child(1){
+   display:block;
+  
+   
+   width:100vw;
 
+
+}
+.wrapper>main>section:nth-child(1) video{
+  
+    
+}
 
 /* FOOTER */
 .wrapper>footer{
@@ -172,6 +193,7 @@ body::-webkit-scrollbar{
 
 /* OPENCANVAS */
 .offcanvas_btn{
+
    position:fixed;
    top:50vh;
    left:0px;
@@ -226,18 +248,23 @@ body::-webkit-scrollbar{
 
 
 
-.offcanvas .offcanvas-body>.wrapper .buildingwind{
+.offcanvas .offcanvas-body>.wrapper .dangerzone{
     display:flex;
     justify-content: start;
     align-items: start;
     flex-direction: column;
-    background-color:white;
-    
     padding : 10px;
     margin-bottom:20px;
-    font-weight: 800;
+    opacity : 0.8;
+    color:white;
+    padding : 10px;
 }
-.offcanvas .offcanvas-body>.wrapper .buildingwind>.header{
+.offcanvas .offcanvas-body>.wrapper .dangerzone a{
+    text-decoration: none;
+    color:white;
+
+}
+.offcanvas .offcanvas-body>.wrapper .dangerzone>.header{
     width :  319px;
     height : 50px;
     border: 1px solid;
@@ -248,35 +275,38 @@ body::-webkit-scrollbar{
     padding:5px;
 
 }
-.offcanvas .offcanvas-body>.wrapper .buildingwind>.header>h4{
+.offcanvas .offcanvas-body>.wrapper .dangerzone>.header>a {
 
-    
+    text-decoration: none;
     
 }
-.offcanvas .offcanvas-body>.wrapper .buildingwind>.body{
-    height : 450px;
+.offcanvas .offcanvas-body>.wrapper .dangerzone>.body{
+    height : 200px;
     display:flex;
     justify-content: space-between;
     margin-bottom:5px;
+
 }
-.offcanvas .offcanvas-body>.wrapper .buildingwind>.body>div{
+.offcanvas .offcanvas-body>.wrapper .dangerzone>.body>div{
     border : 1px solid ;
 
 }
 
-.offcanvas .offcanvas-body>.wrapper .buildingwind>.footer{
+.offcanvas .offcanvas-body>.wrapper .dangerzone>.footer{
     height : 50px;
     border : 1px solid ;
 }
 
+.details{
 
+    text-align:right;
+}
 /*  */
 .offcanvas .offcanvas-body>.wrapper .dangerzone{
     display:flex;
     justify-content: start;
     align-items: start;
     flex-direction: column;
-    background-color:white;
     font-size : 1.2rem;
     padding : 10px;
     margin-bottom:20px;
@@ -309,65 +339,6 @@ body::-webkit-scrollbar{
 
 }
 
-.offcanvas .offcanvas-body>.wrapper .dangerzone>.footer{
-    height : 50px;
-    border : 1px solid ;
-}
-
-/* OFFCANVAS X BUTTON */
-.offcanvas .offcanvas-body>.wrapper .buildingwind>.header>.cancel{
-    content:"X";
-    display:block;
-    position: absolute;
-    left:90%;
-    top:5px;
-    width : 25px;
-    height : 25px;
-    z-index:555;
-
-}
-
-
-.offcanvas .offcanvas-body>.wrapper .buildingwind>.header>.cancel>a{
-    font-size:white;
-    background-color: #2A76C7;
-    border-radius: 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    color : white;
-    text-decoration: none;
-    font-size:1rem;
- 
-}
-/* OFFCANVAS X BUTTON */
-.offcanvas .offcanvas-body>.wrapper .dangerzone>.header>.cancel{
-    content:"X";
-    display:block;
-    position: absolute;
-    left:90%;
-    top:5px;
-    width : 25px;
-    height : 25px;
-    z-index:555;
-
-}
-.offcanvas .offcanvas-body>.wrapper .dangerzone>.header>.cancel>a{
-    font-size:white;
-    background-color: #2A76C7;
-    border-radius: 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    color : white;
-    text-decoration: none;
-    font-size:1rem;
-    
-}
-
-
 
 
 /* MAP */
@@ -393,6 +364,7 @@ body::-webkit-scrollbar{
     position:relative;
     left:90vw;
 
+
 }
 
 /* MAP MARKER */
@@ -412,3 +384,10 @@ body::-webkit-scrollbar{
 .leaflet-control-zoom{
    border : 0px !important;
 }
+
+
+.buildingDangerFixedBlock{
+    display:none;
+}
+
+
