--- a/css/common.css
+++ b/css/common.css
@@ -391,3 +391,63 @@ body::-webkit-scrollbar{
 }
 
 
+
+/* YOUTUBE */
+
+.section01 .youtubeBlk .wrapper{
+    width:100%;
+
+
+}
+.section01 video {
+    position:relative;
+}
+.section01 .youtubeBlk {
+    position:absolute;
+    left:30vw;
+    top:70vh;
+
+}
+.section01 .youtubeBlk .wrapper .videoblock{
+  display:flex;
+
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+}
+
+.section01 .youtubeBlk .wrapper .videoblock div{
+    width : 150px;
+    height : 100px;
+    border : 1px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    text-align: center;
+    
+}
+.section01 .youtubeBlk .wrapper div{
+ margin:20px;
+}
+
+.section01 .youtubeBlk .wrapper .videoblock div{
+    background-color: white;
+    border-radius: 10px;
+}
+
+.section01 .youtubeBlk .wrapper .videoblock div .material-symbols-outlined{
+    display:absolute;
+    left:0px;
+    top:0px;
+    color : white;
+    border : 1px solid white;
+    width : 50px;
+    border-radius: 10px;
+    background-color: rgb(174, 46, 46);
+
+}
+.section01 .youtubeBlk .wrapper .videoblock div .material-symbols-outlined.naver{
+    background-color: rgb(38, 149, 42) ;
+}
