--- a/css/mobile.css
+++ b/css/mobile.css
@@ -411,3 +411,59 @@ body::-webkit-scrollbar{
 }
 
 
+.section01 .youtubeBlk .wrapper{
+    width:100%;
+
+
+}
+
+.section01 .youtubeBlk {
+ border : 2px solid orange;
+ margin-left:-120px;
+ top:266px;  
+ width : 100vw;
+ 
+}
+.section01 .youtubeBlk .wrapper{
+
+}
+.section01 .youtubeBlk .wrapper .videoblock{
+  display:flex;
+
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+
+  height:400px;  
+  width : 100vw;
+  margin : 0px;
+}
+
+.section01 .youtubeBlk .wrapper .videoblock div{
+    width : 150px;
+    height : 150px;
+    border : 1px solid black;
+ 
+}
+
+.section01 .youtubeBlk .wrapper .videoblock>div{
+    background-color: white;
+    border-radius: 10px;
+    
+}
+
+.section01 .youtubeBlk .wrapper .videoblock div .material-symbols-outlined{
+    display:relative;
+    left:0px;
+    top:0px;
+    color : white;
+    border : 1px solid white;
+    width : 50px;
+    border-radius: 10px;
+    background-color: rgb(174, 46, 46);
+
+
+}
+.section01 .youtubeBlk .wrapper .videoblock div .material-symbols-outlined.naver{
+    background-color: rgb(38, 149, 42) ;
+}
