--- a/css/mobile.css
+++ b/css/mobile.css
@@ -418,7 +418,7 @@ body::-webkit-scrollbar{
 }
 
 .section01 .youtubeBlk {
- border : 2px solid orange;
+ border : 2px solid lightgray;
  margin-left:-120px;
  top:266px;  
  width : 100vw;
@@ -442,7 +442,7 @@ body::-webkit-scrollbar{
 .section01 .youtubeBlk .wrapper .videoblock div{
     width : 150px;
     height : 150px;
-    border : 1px solid black;
+    border : 1px solid lightgray;
  
 }
 
