--- a/css/common.css
+++ b/css/common.css
@@ -468,8 +468,7 @@ body::-webkit-scrollbar{
 .section06{
     width : 100vw;
     height : 100vh;
-    background-color: orange;
-    
+    border : 1px solid orange;
     display:flex;
     justify-content: center;
   
@@ -480,7 +479,7 @@ body::-webkit-scrollbar{
     top:100px;
     width : 50rem;
     height : 40rem;
-    background-color : red;
+    border : 1px solid orange;
     margin : 10px;
     left:4vw;
 
@@ -491,9 +490,37 @@ body::-webkit-scrollbar{
 
     width : 50rem;
     height : 40rem;
-    background-color : blue;
+    border : 1px solid orange;
     margin : 10px;
     left:50vw;
     top:-28.7vw;
     
 }
+
+
+.wrapper >.chartBlock{
+    height:400px;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.wrapper >.chartBlock>.left{
+    width : 200px;
+    height : 100%;
+    border-right : 1px solid lightgray;
+   
+}
+.wrapper >.chartBlock>.right{
+    width:200px;
+    height : 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+}
+
+/* chart */
+#chartdiv {
+    width: 100%;
+    height: 400px;
+  }
