--- a/css/mobile.css
+++ b/css/mobile.css
@@ -21,8 +21,8 @@
   
 body{
     font-family: 'Montserrat', sans-serif;
-    min-height: 100vh;
-    width:100%;    
+    min-height: 400px;
+    width:400px;   
     
 }
 body::-webkit-scrollbar{
@@ -434,13 +434,15 @@ body::-webkit-scrollbar{
 
   height:400px;  
   width : 100vw;
-  margin : 0px;
+  margin : 0 auto;
+  margin-left:10vw;
 }
 
 .section01 .youtubeBlk .wrapper .videoblock div{
     width : 150px;
     height : 150px;
     border : 1px solid lightgray;
+    
  
 }
 
