--- a/css/mobile.css
+++ b/css/mobile.css
@@ -478,7 +478,7 @@ body::-webkit-scrollbar{
 }
 .modal iframe{
     width : 500px;
-    height : 350px;
+    height : 200px;;
 }
     /* 모달창 Style */
     .modal-dialog.modal-xl {
@@ -489,7 +489,7 @@ body::-webkit-scrollbar{
   
     }
     .modal-dialog .modal-body{
-        height:500px;
+        height:200px;
     }
 
     .modal-body{
