--- a/css/mobile.css
+++ b/css/mobile.css
@@ -16,7 +16,6 @@
     font-size: 2.2rem;
     
   };
- 
 
   
 body{
@@ -192,6 +191,7 @@ body::-webkit-scrollbar{
     align-items: center;
     height:800px;
     display:none;
+
 }
 
 
@@ -243,6 +243,7 @@ body::-webkit-scrollbar{
 
 
 .offcanvas{
+    display:none;
     height:100vh;
     width:400px;
     background-color: black;
@@ -369,44 +370,15 @@ body::-webkit-scrollbar{
  
     position:fixed;
     width:100vw;
-    left:calc(-50vw + 50%);
-    height:100vh
-}
-
-.wrapper>main>section>#map .leaflet-control-container{
-    width : 50px;
-    top:5%;  
-    
-}
-.wrapper>main>section>#map  .leaflet-control-zoom{
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position:relative;
-    left:90vw;
-
+    height :300px;
 
 }
 
-/* MAP MARKER */
-.leaflet-popup{
 
-  
-    width :400px;
-   
-}
-.leaflet-popup-content-wrapper{
-    width : 400px ;
-    height:400px;
-    margin:0 auto;
-}
 
-/* MAP -- */
-.leaflet-control-zoom{
-   border : 0px !important;
-}
+
+
+
 
 
 .buildingDangerFixedBlock{
@@ -513,115 +485,194 @@ body::-webkit-scrollbar{
 
 
 /* 06 실시간 풍속정보 */
-.section06{
- display: block;
- position: relative;  
 
+/*-------------*/
+/* updating---------------------------- */
+.section06{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width : 100%;
+    height : 800px;
+    z-index:7;
 }
 .section06>.left
 {
-   display:block;
-   position: relative;
-   width : 100%;
-   height : 150px;
-   left:0;right:0;top:0;bottom:0;
-   margin:0 auto;
-   top:5px !important;
-   /* border : 1px solid red; */
-   border-bottom : 1px solid lightgray;
-   
-}
-.section06>.left img{
-    width : 100%;
-    height : 100%;
-}
-.section06>.right
-{
-    width : 100%;
-    display:block;
-    position: relative;  
-    left:0;right:0;top:10px;bottom:0;
-    margin:0 auto;
-}
+
+    width : 90vw;
+    height : 20vh;
+
+    margin-top:10vh;
 
 
-.section06>.right>.tbl_block{
+    position:fixed !important;
+    top:14vw !important;
+    border : 1px solid lightgray;
+    padding : 10px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px lightgray;
 
-    display:block;
-    position: relative;  
-    /* border : 1px solid red; */
-    height : 150px;
-    font-size:0.5rem;
-    margin-bottom: 5px;
+}
+.section06>.left .weather-top{
+    height:30px;
+    line-height:30px;
+    font-size:1rem;
+    font-weight: 800;
+    margin-bottom : 10px;
+
+}
+.section06>.left .weather-nav{
+    height:50px;
     border-bottom : 1px solid lightgray;
 }
+.section06>.left .weather-nav button{
 
 
-.section06>.right>.chartBlock{
-    display:block;
-   position: relative;  
-   /* border : 1px solid red; */
-   display:flex;justify-content: center;
-   align-items: center;
-   flex-direction: column;
+        border-radius:5px;
+        width:40px !important;
+        height:25px !important;
+        font-size:0.4rem;
+
 }
+.section06>.left .weather-body{
 
-.section06>.right>.chartBlock>.left{
-   display:block;
-   position: relative;  
-   top:0;bottom:0;left:0;right:0;
-   
-   border-bottom : 1px solid lightgray;
-   width : 100% !important;
-   height : 160px !important;
-
-    
 }
-.section06>.right>.chartBlock>.left{
-    /* width:200px;
-    height : 100%;
-    display: flex; */
-    justify-content: space-between;
+.section06>.left .weather-body>.weather-body-top{
+
+}
+.section06>.left .weather-body>.weather-body-section{
+
+}
+.section06>.left .weather-body>.weather-body-section>.weather-info{
+    display:flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
-    display:block;
-}
-.section06>.right>.chartBlock>.left canvas{
-
-    display:block !important;
-    position:relative !important;
-    margin : 0 auto;
-
-    
-}
-canvas#leftChart{
-  
-
-}
-
-.section06>.right>.chartBlock>.right{
-  
-    left:0;right:0;top:0px;bottom:0;
-    margin:0 auto;
-    position:relative;
-    top: 35px;
-    width : 200px;
-    height : 200px;
-
-    /* border : 1px solid blue; */
-    z-index:-1;
-     
-}
-.section06>.right>.chartBlock>.right  .container{
-    position: relative;
-    width : 200px;
-    height : 200px;
-
-    /* border : 1px solid blue; */
-}
-
-th,td{
-    width:50px;
     text-align:center;
 }
-  
+.section06>.left .weather-body>.weather-body-section>.weather-info img{
+    width : 7vw;
+    height : 9vh;
+    margin : 20px auto;
+    position:relative;
+    margin : 0 auto;
+    object-fit : contain;
+}
+.section06>.left .weather-body>.weather-body-section>.weather-info span{
+    position:absolute;
+    top:2vw;
+    left:4vw;
+    font-size:2.5rem;
+    font-weight:800;
+}
+.section06>.left .weather-body>.weather-body-section>.weather-info .weather-info-body{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border : 1px solid lightgray;
+    border-radius: 5px;
+    width : 100%;
+    margin-top:20px;
+}
+.section06>.left .weather-body>.weather-body-section>.weather-info .weather-info-body span{
+    font-size : 0.9rem !important;
+    position:relative !important;
+    width : 80% !important;
+    top:0;
+    left:0;
+    margin : 10px;
+
+
+}
+.section06>.left .weather-body>.weather-body-section>.weather-footer{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.section06>.left .weather-body>.weather-body-section>.weather-footer button{
+    border : 1px solid lightgray;
+    margin : 10px;
+    font-size : 0.8rem;
+}
+
+.section06>.left .weather-body>.weather-body-section>.weather-footer button::first-child
+{
+    margin-left:0px;
+}
+.section06>.left .weather-body>.weather-body-section>.weather-footer button::last-child
+{
+    margin-right:0px;
+}
+
+
+.section06>.right
+{
+
+
+}
+
+
+.section06>.right>.tbl_block{}
+
+.section06>.right::-webkit-scrollbar{
+    display:none;
+}
+
+.section06>.right>.chartBlock{
+
+
+}
+
+.section06>.right>.chartBlock>.left{
+
+}
+.section06>.right>.chartBlock>.left>#leftChart{
+
+}
+.section06>.right>.chartBlock>.left{
+
+}
+.section06>.right>.chartBlock>.right{
+
+}
+
+tr,th,td{
+    width:5vw;
+    height : 2vw ;
+    text-align:center;
+}
+/* ---------------------------- */
+
+/*-------------*/
+.section02{
+    width : 100vw  ;
+    display:flex  !important;
+    justify-content : center  !important  ;
+    align-items : center !important ;
+    flex-direction : column !important;
+    height : 600px  !important;
+
+
+
+}
+.section02>div{
+    width : 24.063rem  ;
+    height :15.5 rem  ;
+    top : 15vw;
+    display:flex  ;
+    justify-content : center  ;
+    align-items : center ;
+    flex-direction : row
+    height : 600px  ;
+    object-fit : cover;
+
+}
+
+.section02 img{
+    position:relative;
+    width : 369px ;
+    height : 88px ;
+    left : 2vw;top:0;right:0;bottom:0;
+    margin : auto;
+
+}
