--- a/css/common.css
+++ b/css/common.css
@@ -178,8 +178,8 @@ body::-webkit-scrollbar{
 
 }
 .wrapper>main>section:nth-child(1) video{
-  
-    
+
+
 }
 
 /* FOOTER */
@@ -206,7 +206,7 @@ body::-webkit-scrollbar{
     width :20px;
     left:-1px;
 
-    
+
 }
 .ToRight{
     transform:translateX(400px);
@@ -233,11 +233,11 @@ body::-webkit-scrollbar{
 
 .offcanvas .offcanvas-body>.wrapper{
     display:flex;
-    justify-content: center; 
-    align-items: start; 
+    justify-content: center;
+    align-items: start;
     width:350px;
-   
-   
+
+
     position:relative;
     top:150px;
     padding:5px;
@@ -275,7 +275,7 @@ body::-webkit-scrollbar{
 .offcanvas .offcanvas-body>.wrapper .dangerzone>.header>a {
 
     text-decoration: none;
-    
+
 }
 .offcanvas .offcanvas-body>.wrapper .dangerzone>.body{
     height : 200px;
@@ -321,8 +321,8 @@ body::-webkit-scrollbar{
 }
 .offcanvas .offcanvas-body>.wrapper .dangerzone>.header>h4{
 
-    
-    
+
+
 }
 .offcanvas .offcanvas-body>.wrapper .dangerzone>.body{
     height : 450px;
@@ -340,7 +340,7 @@ body::-webkit-scrollbar{
 
 /* MAP */
 .wrapper>main>section>#map{
- 
+
     position:fixed;
     width:100vw;
     left:calc(-50vw + 50%);
@@ -349,11 +349,11 @@ body::-webkit-scrollbar{
 
 .wrapper>main>section>#map .leaflet-control-container{
     width : 50px;
-    top:5%;  
-    
+    top:5%;
+
 }
 .wrapper>main>section>#map  .leaflet-control-zoom{
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -367,9 +367,9 @@ body::-webkit-scrollbar{
 /* MAP MARKER */
 .leaflet-popup{
 
-  
+
     width :400px;
-   
+
 }
 .leaflet-popup-content-wrapper{
     width : 400px ;
@@ -412,8 +412,8 @@ body::-webkit-scrollbar{
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  
-  
+
+
 
 
 }
@@ -428,11 +428,11 @@ body::-webkit-scrollbar{
     color:white;
     text-align: center;
     z-index:888;
-    
+
 }
 .section01 .youtubeBlk .wrapper div{
  margin:20px;
- 
+
 }
 
 .section01 .youtubeBlk .wrapper .videoblock div{
@@ -461,10 +461,6 @@ body::-webkit-scrollbar{
 }
 
 
-.section02 .left{
-    height : 800px;
-    z-index:999;
-}
 
     /* 모달창 Style */
     .modal-dialog.modal-xl {
@@ -472,7 +468,7 @@ body::-webkit-scrollbar{
         top:80px;
         width:1200px;
         height: 700px;
-  
+
     }
     .modal-dialog .modal-body{
         height:700px;
@@ -499,77 +495,161 @@ body::-webkit-scrollbar{
 .section06{
     width : 100vw;
     height : 100vh;
-    
+
     display:flex;
     justify-content: center;
-  
+
+}
+
+/* updating---------------------------- */
+.section06{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width : 100%;
 }
 .section06>.left
 {
-   
-  
+
     width : 30vw;
     height : 40vh;
 
     margin : 10px;
     left:4vw;
-    position:fixed;
-    top:35vh !important;
-   
+
+    position:fixed !important;
+    top:14vw !important;
+    border : 1px solid lightgray;
+    padding : 10px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px lightgray;
+
 }
+.section06>.left .weather-top{
+    height:40px;
+    line-height:40px;
+    font-size:1.3rem;
+    font-weight: 800;
+    margin-bottom : 10px;
 
-.section06>.right
-{
-
-    width : 60vw;
-    height : 30vh;
- 
-    margin : 10px;
-    left:35vw;
-    top:-28.7vw;
- 
-    position:fixed;top:20vh;
 }
-
-
-.section06>.right>.tbl_block{
-
-    overflow:auto;height:30vh;
+.section06>.left .weather-nav{
+    height:60px;
+    border-bottom : 1px solid lightgray;
 }
+.section06>.left .weather-nav button{
+    border-radius:20px;width:80px;height:45px;
+}
+.section06>.left .weather-body{
 
+}
+.section06>.left .weather-body>.weather-body-top{
 
-.section06>.right>.chartBlock{
+}
+.section06>.left .weather-body>.weather-body-section{
+
+}
+.section06>.left .weather-body>.weather-body-section>.weather-info{
     display:flex;
     justify-content: center;
     align-items: center;
-    margin-top:10px;
-    top:-1.5vw;
-    margin-top:10px;
-}
-
-.section06>.right>.chartBlock>.left{
-    
-    width:60vw !important;
-    height:100%;
-}
-.section06>.right>.chartBlock>.left>#leftChart{
-  
-}
-.section06>.right>.chartBlock>.left{
-    width:200px;
-    height : 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     flex-direction: column;
-}
-.section06>.right>.chartBlock>.right{
-display:flex;justify-content: center;
-align-items: center;margin:0 auto;
-}
-
-th,td{
-    width:100px;
     text-align:center;
 }
-  
+.section06>.left .weather-body>.weather-body-section>.weather-info img{
+    width : 7vw;
+    height : 9vh;
+    margin : 20px auto;
+    position:relative;
+    margin : 0 auto;
+}
+.section06>.left .weather-body>.weather-body-section>.weather-info span{
+    position:absolute;
+    top:2vw;
+    left:4vw;
+    font-size:2.5rem;
+    font-weight:800;
+}
+.section06>.left .weather-body>.weather-body-section>.weather-info .weather-info-body{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border : 1px solid lightgray;
+    border-radius: 5px;
+    width : 100%;
+    margin-top:20px;
+}
+.section06>.left .weather-body>.weather-body-section>.weather-info .weather-info-body span{
+    font-size : 0.9rem !important;
+    position:relative !important;
+    width : 80% !important;
+    top:0;
+    left:0;
+    margin : 10px;
+
+
+}
+.section06>.left .weather-body>.weather-body-section>.weather-footer{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.section06>.left .weather-body>.weather-body-section>.weather-footer button{
+    border : 1px solid lightgray;
+    margin : 10px;
+    font-size : 0.8rem;
+}
+
+
+
+
+.section06>.right
+{
+    position:fixed !important;
+    display:flex !important;
+    top:10vh !important;
+    left:40vw !important;
+    height : 800px;
+    justify-content: center !important;;
+    align-items: center !important;
+    text-align: right;
+}
+
+
+.section06>.right>.tbl_block{}
+
+.section06>.right::-webkit-scrollbar{
+    display:none;
+}
+
+.section06>.right>.chartBlock{
+
+
+}
+
+.section06>.right>.chartBlock>.left{
+
+}
+.section06>.right>.chartBlock>.left>#leftChart{
+
+}
+.section06>.right>.chartBlock>.left{
+
+}
+.section06>.right>.chartBlock>.right{
+
+}
+
+tr,th,td{
+    width:5vw;
+    height : 2vw ;
+    text-align:center;
+}
+/* ---------------------------- */
+
+
+section.section02{
+    width : 100vw;
+
+}
+
